# macrostrat

./: .gitignore  .gitmodules  .macrostrat_staging_context.json  Makefile  README.md  conftest.py  db-local.Dockerfile  docker-compose.yaml  macrostrat.example.toml  macrostrat.toml.example  mise.toml  pyproject.toml
api-v3/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api-v3/api/: app.py  auth.py  crud.py  database.py  models.py  query_parser.py  schemas.py
cli/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
cli/archive/: reprocess.py
cli/docs/: cli-usage.md
cli/tests/: macrostrat.test.toml  test_cli.py  test_environment.py  test_sgp_match.py
core/: pyproject.toml
integrations/: pyproject.toml
integrations/sed-geochemistry-project/: replicate-jhusson-match.sql  samples.sql
macrostrat-cli/: .gitignore  Dockerfile  Makefile  README.md  __move_tables.py  build.py  build_tables.py  credentials.yml.example  move.py  pyproject.toml  setup.py  table_meta.py
macrostrat-cli/ad-hoc-migrations/: carto-rebuild-procedures.sql  carto-rebuild.sql  map-legend-deduplicate.sql  misc-geom-cleanups.sql  set-macrostrat-srids.sql
macrostrat-cli/archive/: reprocess.py  reprocess_units.py
macrostrat-cli/cli/: __init__.py  base.py  cli.py
macrostrat-cli/docs/: cli-usage.md
macrostrat-cli/geom/: __init__.py  rgeom.py  web_geom.py
macrostrat-cli/macrostrat_cli/: cli.py  config.py  core.py  database.py  test_cli.py  utils.py  v1_entrypoint.py
map-integration/: .env.example  .gitignore  .gitmodules  Makefile  NEW_PROCESS_NOTES.md  README.md  TODO.md  conftest.py  credentials.example.py  credentials.yml.example  go_to_production.sh  import  macrostrat.toml.template  package.json  process_source.py  pyproject.toml  update_gmus_attributes.py  v2_whitepaper.md
map-integration/__archive/: process_source.py
map-integration/cleaning-sql/: example-sql.sql
map-integration/import_scripts/: multiprocessor.py  rgeom.py  union.py
map-integration/map_integration_cli/: __init__.py  database.py
map-integration/matching/: add_match.py  gmus_alterations.csv  import_gmus_matches.py  match.py  match_multiprocessor.py  match_names.py  match_names_multi.py  match_parallel.py  match_units.py  match_units_multi.py  matchit.py  remove_match.py  strat_name_match.py
map-integration/schema/: maps-schema.sql
map-integration/setup/: _old_refresh_lookup.py  build_carto.js  build_flat.js  build_lookup.py  carto_small.sql  create_lookup_tables.sql  create_strat_names_footprints.sql  credentials.example.py  import_macrostrat.py  refresh.py  refresh_lookup.py  setup.sh  setup.sql  update_source_stats.sql
map-integration/tests/: conftest.py  test_geodatabase.py  test_map_staging.py
map-integration/tile-tester/: credentials.js  package.json  server.js  tileserver.js
map-integration/tiles/: README.md  _old_seed.js  build_styles.py  burwell.mml  cache.js  compile_styles.js  config.js  create_config.py  credentials.js.example  generate.py  package.json  refresh.py  roll.py  roll_new.py  seed  seed.js  seeder.js  setup.js  setup.sql  setupVector.js  setup_new.sql  simple_seed.js  styles.mss  template.mml  tileCluster.js  tileRoller.js  tilestache.cfg
map-integration/utils/: carto.py  carto_lines.py  createCarto.js  flatten_scale.py  flatten_scale_lines.py  go_to_production.sh  move.py  rgeom.py  schlep_source.py  updateCarto.js  updateCartoLines.js
map-integration/v1/: credentials.example.yml
map-staging/: Makefile  Potential Data Sources.md  README.md  macrostrat.toml  macrostrat.toml.template  pyproject.toml  requirements.txt
map-staging/data/: alaska.csv  criticalmaas_09.csv  criticalmaas_09_all.csv  japan.html
map-staging/docs/: Sources.md
py-modules/cli/: Makefile  pyproject.toml
py-modules/column-ingestion/: README.md  pyproject.toml
py-modules/core/: pyproject.toml
py-modules/integrations/: README.md  pyproject.toml
py-modules/map-integration/: Makefile  pyproject.toml
py-modules/map-topology/: README.md  pyproject.toml
py-modules/map-utils/: README.md  pyproject.toml
py-modules/match-utils/: README.md  pyproject.toml
py-modules/raster-cli/: README.md  pyproject.toml
py-modules/schema-management/: README.md  pyproject.toml
py-modules/tile-cache/: pyproject.toml
py-modules/tileserver-stats/: README.md  pyproject.toml
py-modules/tileserver-utils/: README.md  pyproject.toml
py-modules/worker/: Dockerfile  README.md  pyproject.toml
py-root/: Makefile  macrostrat  pyproject.toml
raster-cli/: pyproject.toml
raster-cli/pipeline/: pyproject.toml
services/api-v3/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/column-footprint-editor/: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  requirements.txt
services/legacy-tileserver/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/tileserver/: .gitignore  CLAUDE.md  Dockerfile  Makefile  conftest.py  pyproject.toml
v2-transition/: .gitignore  .gitmodules  Makefile  README.md  ansible.cfg  docker-compose.yaml  macrostrat.toml  pyproject.toml
v2-transition/__backup/: .gitignore  README.md  docker-compose.yml.bad  docker-compose.yml.bak  install.pl  project-data.override.yml  setup.yml.bak
v2-transition/__old_apps/: .gitignore
v2-transition/__old_scripts/: macrostrat  macrostrat-maps  strat-build-api  strat-compose  strat-copy-data  strat-copy-elevation-to-kubernetes  strat-copy-local  strat-corelle  strat-db-alterations  strat-dump-database-local  strat-dump-dev-database-to-s3  strat-export-query  strat-load-rockd  strat-mysql  strat-run  strat-stage-source  strat-tileserver-tests
v2-transition/ansible/: ansible.cfg  dev-macrostrat-v2-notes.md
v2-transition/backup-system/: docker-compose.yaml
v2-transition/copy-databases/: copy-postgres-database.sh
v2-transition/database-upgrades/: Dockerfile  docker-postgresql-init.sql
v2-transition/dev-server/: docker-compose.yaml
(+3336 files in other folders)
