# This project-level UV configuration is a convenience for development.
# It is not required for end users of macrostrat.cli.

[project]
name = "macrostrat-system"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "setuptools>=75.8.2,<76",
    "macrostrat.cli",
    "macrostrat.match-utils",
]

[dependency-groups]
gis = ["macrostrat.cli[gis]"]
dev = [
    "isort>=5.13.2,<6",
    "pytest>=8.3.2,<9",
    "black>=24.8.0,<25",
]

[tool.uv]
package = false
default-groups = [
    "dev",
]

[tool.uv.sources]
"macrostrat.cli" = { workspace = true }
"macrostrat.match-utils" = { workspace = true }
"macrostrat.api-v3" = { path = "services/api-v3"  }

[tool.uv.workspace]
members = ["py-modules/*", "cli"]


[tool.black]
line-length = 88
extend-exclude = "__archive|submodules"

[tool.isort]
profile = "black"
known_first_party = "macrostrat"
extend_skip = ["__archive", "submodules"]

[tool.pytest.ini_options]
markers = [
    "docker: marks tests as requiring a docker container",
    "requires_gdal: marks tests as requiring GDAL",
]

[tool.pylint.messages-control]
max-line-length = 88
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
