[tool.poetry]
name = "sources-api"
version = "0.1.0"
description = ""
authors = ["Cannon Lock <clock@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
fastapi = "^0.104.0"
httpx = "^0.25.0"
asyncpg = "^0.28.0"
pytest-asyncio = "^0.21.1"
uvicorn = "^0.23.2"
geoalchemy2 = "^0.14.2"
geojson-pydantic = "^1.0.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
