[tool.poetry]
name = "macrostrat.core"
version = "2.0.0"
description = "The core of the Macrostrat system"
authors = ["Daven Quinn"]
packages = [{ include = "macrostrat" }]

[tool.poetry.dependencies]
dynaconf = "^3.1.12"
"macrostrat.app-frame" = "^1.2.3"
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.28"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

