[tool.poetry]
name = "macrostrat.core"
version = "2.0.0"
description = "The core of the Macrostrat system"
authors = ["Daven Quinn"]
packages = [{ include = "macrostrat" }]

[tool.poetry.dependencies]
dynaconf = "^3.1.12"
"macrostrat.app-frame" = "^1.2.3"
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.28"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true

[tool.pylint.messages-control]
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
