[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat's command-line interface"
name = "macrostrat.cli"

packages = [{include = "macrostrat_cli"}]

readme = "README.md"
version = "2.2.0"

[tool.poetry.dependencies]
Fiona = "^1.8.22"
PyMySQL = "^1.0.2"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.42"
geopandas = "^0.12.0"
ipython = "^8.5.0"
"macrostrat.database" = {version = "2.0.0.dev3", allow-prereleases = true}
numpy = "^1.23.4"
psycopg2 = "^2.9.4"
pygeos = "^0.13"
pyproj = "^3.4.0"
python = "^3.10"
requests = "^2.28.1"
rich = "^12.6.0"
scipy = "^1.9.3"
shapely = "^1.8.5.post1"
spectra = "^0.0.11"
tiletanic = "^1.1.0"
tqdm = "^4.64.1"
typer = "^0.6.1"

[tool.poetry.scripts]
macrostrat = "macrostrat_cli.cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
