[tool.poetry]
authors = [
  "Daven Quinn <dev@davenquinn.com>",
  "Casey Idzikowski",
  "John J Czaplewski <jczaplewski@wisc.edu>",
]
description = "Macrostrat's command-line interface"
name = "macrostrat.cli"

packages = [{ include = "macrostrat_cli" }]

readme = "README.md"
version = "2.2.0"

[tool.poetry.dependencies]
Fiona = "^1.8.22"
PyMySQL = "^1.0.2"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.42"
dynaconf = "^3.1.12"
geopandas = "^0.12.0"
ipython = "^8.5.0"
"macrostrat.app-frame" = "^1.1.0"
"macrostrat.database" = "^2.0.0"
numpy = "^1.23.4"
psycopg2-binary = "^2.9.4"
pygeos = "^0.14"
pyproj = "^3.4.0"
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.28.1"
rich = "^13"
scipy = "^1.9.3"
shapely = "^2.0.1"
spectra = "^0.0.11"
tiletanic = "^1.1.0"
tqdm = "^4.65.0"
typer = "^0.9.0"
portforward = "^0.6.0"
werkzeug = "^3.0.1"

[tool.poetry.scripts]
macrostrat = "macrostrat_cli.cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
