[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat tools for map integration"
name = "macrostrat.map_integration"
readme = "README.md"
version = "2.0.0"

packages = [{ include = "macrostrat" }]

[tool.poetry.dependencies]
python = "^3.11"

geopandas = "^0.14.1"
ipython = "^8.5.0"
"macrostrat.database" = "^3.1.2"
numpy = "^1.23.4"
psycopg2-binary = "^2.9.4"
pyproj = "^3.4.0"
rich = "^13"
scipy = "^1.9.3"
typer = "^0.12.0"

minio = "^7.2.5"
python-dotenv = "^1"
python-magic = "^0.4.27"
pyyaml = "^6.0"
shapely = "^2.0.1"

"macrostrat.core" = { path = "../core", develop = true }

[tool.poetry.scripts]
# Override the default entrypoint for the macrostrat.cli package
macrostrat-maps = "macrostrat.map_integration:app"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
black = "^24.2"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true

[tool.pylint.messages-control]
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
