## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 96
target-version = ["py39", "py310", "py311", "py312"]


[tool.isort]
line_length = 96
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "macrostrat.map_staging"
version = "0.0.1"
description = "Scripts for staging maps into Macrostrat"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
    "Cannon Lock <clock@wisc.edu>",
]
repository = "https://github.com/UW-Macrostrat/macrostrat"
packages = [{ include = "macrostrat" }]


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "~4.12"
minio = "~7.2"
requests = "~2.31"
psycopg = "~3.1"
python-magic = "~0.4"
"macrostrat.cli" = { path = "../cli", develop = true }
"macrostrat.core" = { path = "../core", develop = true }
"macrostrat.map_integration" = { path = "../map-integration", develop = true }


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~24.3"
docutils = "~0.20"
isort = "~5.13"
mypy = "~1.9"
pre-commit = "~3.7"
pylint = "~3.1"
types-beautifulsoup4 = "~4.12"
types-requests = "~2.31"


[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
