[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macrostrat.map_staging"
version = "0.0.1"
description = "Scripts for staging maps into Macrostrat"
authors = [
    { name = "Brian Aydemir", email = "baydemir@morgridge.org" },
    { name = "Cannon Lock", email = "clock@wisc.edu" },
]
requires-python = "~=3.11"
license = "Apache-2.0"
dependencies = [
    "beautifulsoup4>=4.12,<4.13",
    "requests>=2.31,<2.32",
    "macrostrat.cli",
    "macrostrat.core",
    "macrostrat.map_integration",
]

[project.urls]
Repository = "https://github.com/UW-Macrostrat/macrostrat"

[dependency-groups]
dev = [
    "bandit>=1.7,<1.8",
    "black>=24.4,<24.5",
    "docutils>=0.21,<0.22",
    "isort>=5.13,<5.14",
    "mypy>=1.10,<1.11",
    "pre-commit>=3.7,<3.8",
    "pylint>=3.1,<3.2",
    "types-beautifulsoup4>=4.12,<4.13",
    "types-requests>=2.31,<2.32",
]

[tool.black]
line-length = 96
target-version = ["py39", "py310", "py311", "py312"]

[tool.uv]

[tool.uv.sources]
"macrostrat.cli" = { path = "../cli", editable = true }
"macrostrat.core" = { path = "../core", editable = true }
"macrostrat.map_integration" = { path = "../map-integration", editable = true }

[tool.isort]
line_length = 96
profile = "black"

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true

[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
