[tool.poetry]
name = "macrostrat-local-system"
version = "0.1.0"
description = "A local installation of Macrostrat for development. This project basically wraps Macrostrat subsystems into a single package."
authors = ["Daven Quinn"]

[tool.poetry.dependencies]
python = "^3.11"
"macrostrat.cli" = { path = "../cli", develop = true }
"macrostrat.core" = { path = "../core", develop = true }
"macrostrat.map_integration" = { path = "../map-integration", develop = true }
"corelle.engine" = { path = "../../../Software/corelle/py-packages/engine", develop = true }
"macrostrat.tileserver" = { path = "../../../Software/tileserver", develop = true }
"criticalmaas.ta1_geopackage" = { path = "../../../Software/criticalmaas-ta1-format", develop = true }

[tool.poetry.dev-dependencies]
"macrostrat.package_tools" = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


