[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "A platform for geological data exploration, integration, and analysis"
name = "macrostrat.infrastructure"
readme = "README.md"
version = "2.0.0-dev1"

[tool.poetry.dependencies]
"macrostrat.cli" = {path = "./tools/macrostrat-utils", develop = true}
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
