[project]
name = "macrostrat.core"
version = "2.0.1"
description = "The core of the Macrostrat system"
authors = [{ name = "Daven Quinn" }]
requires-python = ">=3.11,<4"
dependencies = [
    "dynaconf>=3.1.12,<4",
    "macrostrat.app-frame>=3.0.4,<4",
    "macrostrat.database>=3.5.3,<4",
    "python-dotenv>=1.0.0,<2",
    "sqlalchemy>=2.0.28,<3",
    "toml>=0.10.2,<0.11",
    "click>=8.1.0,<9"
]

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true

[tool.pylint.messages-control]
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
