[project]
name = "macrostrat.map_integration"
version = "2.0.0"
description = "Macrostrat tools for map integration"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "geopandas>=1.1.3,<2",
    "ipython>=8.5.0,<10",
    "macrostrat.database>=4.0.0,<5",
    "numpy>=2.0.0,<3",
    "pyproj>=3.4.0,<4",
    "rich>=13,<16.0",
    "scipy>=1.17.1,<2",
    "typer>=0.12,<0.26",
    "minio>=7.2.5,<8",
    "python-dotenv>=1,<2",
    "pylibmagic>=0.5.0,<0.6",
    "python-magic>=0.4.27,<0.5",
    "pyyaml~=6.0",
    "shapely>=2.1.2,<3",
    "pyogrio>=0.12.1,<0.13",
    "psycopg>=3.0.0,<4",
    "macrostrat.core",
]

[project.scripts]
macrostrat-maps = "macrostrat.map_integration:app"

[project.optional-dependencies]
gis = [
    "GDAL>=3.10.0,<4",
]

[dependency-groups]
dev = [
    "bandit>=1.7.7,<2",
    "black~=24.2",
    "isort>=5.13.2,<6",
    "mypy>=1.8.0,<2",
    "pylint>=3.1.0,<4",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.uv.sources]
"macrostrat.core" = { path = "../core", editable = true }

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true

[tool.pylint.messages-control]
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
