[project]
name = "macrostrat.match-utils"
version = "0.1.0"
description = "Utilities to match geologic information to Macrostrat rock units"
authors = [{ name = "Daven Quinn", email = "code@davenquinn.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
