[project]
name = "macrostrat.raster_cli"
version = "0.1.0"
description = "Prototype raster processing CLI for Macrostrat"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
dependencies = [
    "typer>=0.12.5,<0.24.0",
    "rio-cogeo>=5.0.0,<6",
    "boto3>=1.28.50,<2",
    "wget~=3.2",
    "python-dotenv>=1.0.0,<2",
]

[project.scripts]
macrostrat-raster = "macrostrat.raster_cli:app"

[dependency-groups]
dev = ["ipython>=8.15.0,<9"]

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
