[project]
name = "macrostrat.schema-management"
version = "1.1.0"
description = "Schema management for Macrostrat's database"
authors = [
    { name = "Daven Quinn", email = "dev@davenquinn.com" },
    { name = "Matthew Westphall" },
    { name = "Amy Fromandi" }
]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "macrostrat.app-frame>=3.0.0,<4",
    "macrostrat.database>=3.5.4,<4",
    "macrostrat.utils>=1.3.0,<2",
    "macrostrat.dinosaur>=3.0.1,<4",
    "rich>=13,<14",
    "typer>=0.12,<0.25",
    "click>=8.1.0,<8.2.0",
    "docker>=7,<8",
    "pytest>=8.3.4,<9",
    "results>=1.4.0,<1.5.0",
    "testcontainers>=4.14.2",
]

[tool.uv.sources]
"macrostrat.core" = { path = "../core", editable = true }

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
