[project]
name = "tileserver_stats"
version = "0.1.0"
description = "Harvest tileserver statistics"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "macrostrat.database>=3.1.1,<4",
    "python-dotenv>=1.0.0,<2",
    "rich>=13,<14",
    "typer>=0.12.5,<0.13",
]

[project.scripts]
tileserver-stats = "tileserver_stats:app"

[dependency-groups]
dev = ["black>=24.8.0,<25"]

[tool.hatch.build.targets.sdist]
include = ["tileserver_stats"]

[tool.hatch.build.targets.wheel]
include = ["tileserver_stats"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
