[project]
name = "tileserver_stats"
version = "0.1.0"
description = "Harvest tileserver statistics"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "macrostrat.database>=3.1.1,<4",
    "macrostrat.core",
    "minio>=7.2.20",
    "python-dotenv>=1.0.0,<2",
    "rich>=13,<14",
    "typer>=0.12,<0.25",
    "zstandard>=0.25.0",
]

[project.scripts]
tileserver-stats = "tileserver_stats:app"

[project.entry-points."macrostrat.subsystems"]
tileserver-stats = "tileserver_stats:app"

[dependency-groups]
dev = ["black>=24.8.0,<25"]

[tool.uv.sources]
"macrostrat.core" = { path = "../core", editable = true }

[tool.hatch.build.targets.sdist]
include = ["tileserver_stats"]

[tool.hatch.build.targets.wheel]
include = ["tileserver_stats"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
