[project]
name = "tileserver_stats"
version = "0.1.0"
description = "Harvest tileserver statistics"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "macrostrat.database>=4.4.1,<5",
    "macrostrat.core",
    "minio>=7.2.20",
    "python-dotenv>=1.0.0,<2",
    "rich>=13,<16",
    "typer>=0.12,<0.27",
    "zstandard>=0.25.0",
    "matplotlib>=3.9.2,<4",
    "polars>=1.42.0,<2"
]

[project.scripts]
tileserver-stats = "tileserver_stats:app"

[project.entry-points."macrostrat.subsystems"]
tileserver-stats = "tileserver_stats:app"

[dependency-groups]
dev = ["black>=24.8.0,<25"]

[tool.uv.sources]
"macrostrat.core" = { path = "../core", editable = true }

[tool.hatch.build.targets.sdist]
include = ["tileserver_stats"]

[tool.hatch.build.targets.wheel]
include = ["tileserver_stats"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
